Removed code duplication!